refactor: remove extra config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     db:
         image: postgres:14-alpine
         environment:
-            - POSTGRES_USER=$db_user
-            - POSTGRES_PASSWORD=$db_pass
-            - POSTGRES_DB=$db_name
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=0000
+            - POSTGRES_DB=investor
         ports:
             - 5431:5432
         networks:
